--- a/2025-09-23.html
+++ b/2025-09-23.html
@@ -241,7 +241,10 @@
                 { term: "Sovereign state", definition: "A political entity represented by one centralized government that has sovereignty over a geographic area.", translation: "主權國家", example: "The country was recognized as a sovereign state." },
                 { term: "Malnutrition", definition: "A condition that results from a diet in which nutrients are either not enough or are too much.", translation: "營養不良", example: "Malnutrition is a serious health issue in many developing countries." },
                 { term: "Relocate", definition: "To move to a new place and establish one's home or business there.", translation: "遷移", example: "The company decided to relocate its headquarters." },
-                { term: "Therapeutic", definition: "Relating to the healing of disease.", translation: "治療性的", example: "The clinic offers a range of therapeutic services." }
+                { term: "Therapeutic", definition: "Relating to the healing of disease.", translation: "治療性的", example: "The clinic offers a range of therapeutic services." },
+                { term: "General Assembly", definition: "The main deliberative organ of the United Nations.", translation: "聯合國大會", example: "The General Assembly meets annually in New York." },
+                { term: "Nonprofit", definition: "Not making or conducted primarily to make a profit.", translation: "非營利組織", example: "The hospital is a nonprofit organization." },
+                { term: "Root canal", definition: "The pulp-filled cavity in the root of a tooth.", translation: "根管治療", example: "The dentist said I need a root canal." }
             ];
 
             const sentenceData = [
@@ -254,6 +257,16 @@
                     timestamp: "01:24",
                     sentence: "The broadcast also covers the 80th annual UN General Assembly in New York, highlighting the recent wave of countries, including France and the UK, <span class='sentence-highlight' data-tip='This means that more and more countries are officially recognizing Palestine as its own country with full political rights, putting pressure on the United States.'>recognizing Palestine as a sovereign state</span>.",
                     translation: "廣播也報導了在紐約舉行的第 80 屆聯合國大會，強調了包括法國和英國在內的一波國家，<u>承認巴勒斯坦為主權國家</u>。"
+                },
+                {
+                    timestamp: "03:00",
+                    sentence: "The program features a story about Mana Nutrition, an American nonprofit founded by Mark Moore, <span class='sentence-highlight' data-tip='This describes the purpose of Mana Nutrition - to create food that helps children with malnutrition. The phrase 'ready-to-use' means it can be eaten without any preparation.'>which creates a ready-to-use therapeutic food to combat childhood malnutrition</span>.",
+                    translation: "這個節目報導了 Mana Nutrition 的故事，這是一個由 Mark Moore 創立的美國非營利組織，<u>它製造一種即食的治療性食物來對抗兒童營養不良</u>。"
+                },
+                {
+                    timestamp: "06:15",
+                    sentence: "The video highlights the 'Course des Cafes,' a 100-year-old tradition in Paris <span class='sentence-highlight' data-tip='This is a descriptive clause telling us what the waiters do during the race. They have to balance a tray with drinks and food while running.'>where waiters race through the city while balancing a tray with items on it</span>.",
+                    translation: "影片介紹了「咖啡館賽跑」，這是巴黎一項有 100 年歷史的傳統，<u>服務生們要在城市中奔跑，同時平衡放著物品的托盤</u>。"
                 },
                 {
                     timestamp: "08:05",
